--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-jazzmin==3.0.1
 idna==3.10
 load-dotenv==0.1.0
 pillow==11.0.0
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 rcssmin==1.1.2
 requests==2.32.3
